# affilify-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  bot_improvement_plan.md  docker-compose.yml
.github/workflows/: docker-multiarch.yml
src/: config.rs  db.rs  main.rs  utils.rs
src/commands/: amazon.rs  configure.rs  stats.rs
